# azure-rust-mcp-server-apim

./: .gitignore  Cargo.toml  Dockerfile  README.md  azure.yaml
.devcontainer/: devcontainer.json
http/: song-mcp.http  song.http
infra/: main.bicep
server/: Cargo.toml  README.md  openapi.json
server/src/: handlers.rs  main.rs
song-lib/: Cargo.toml  README.md  hello.json
song-lib/src/: lib.rs
