[package]
name = "axum-server"
version = "0.1.5"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenvy = "0.15.0"
http = "1.0.0"
http-body = "1.0.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.6.2", features = ["cors", "catch-panic", "sensitive-headers", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
song = { version = "0.1.0", path = "../song-lib"}

[[bin]]
name = "server"
path = "src/main.rs"
